--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+
+default_asides: [……, custom/asides/flag_counter.html]
+
 # ----------------------- #
 #      Main Configs       #
 # ----------------------- #
@@ -99,3 +102,6 @@ facebook_like: false
 # duoshuo comments
 duoshuo_comments: true
 duoshuo_short_name: icocos
+
+# Flag Counter
+flag_counter: true
