Some comment here.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,3 @@
-
-default_asides: [……, custom/asides/flag_counter.html]
-
 # ----------------------- #
 #      Main Configs       #
 # ----------------------- #
@@ -54,7 +51,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/category_list.html, asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html, custom/asides/qrcode.html]
+default_asides: [asides/category_list.html, asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html, custom/asides/qrcode.html, custom/asides/flag_counter.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -105,3 +102,6 @@ duoshuo_short_name: icocos
 
 # Flag Counter
 flag_counter: true
+
+# Post License
+post_license: true
