Some comment here.

--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/category_list.html, asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html, custom/asides/qrcode.html, custom/asides/flag_counter.html, custom/asides/weibo.html, custom/asides/category_cloud.html, custom/asides/category_list.html, custom/asides/tag_cloud.html, custom/asides/tag_list.html]
+default_asides: [asides/category_list.html, asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html, custom/asides/qrcode.html, custom/asides/flag_counter.html, custom/asides/weibo.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -111,6 +111,3 @@ github_user: al1020119   #我的github
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
-
-category_dir: blog/categories
-tag_dir: blog/tags
