--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ title: iOS梦工厂
 subtitle: 不战胜自己，何以改变未来！
 author: iCocos
 simple_search: https://www.google.com/search
-description:
+description: iCocos博客
+keywords: iCocos, iOS开发, 博客, 技术分析, 文章, 学习, 曹黎, 曹理鹏
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
