Some comment here.

--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ facebook_like: false
 
 # duoshuo comments
 duoshuo_comments: true
-duoshuo_short_name: icocos
+duoshuo_short_name: icocoscao
 
 # Flag Counter
 flag_counter: true
